--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
         "@fontsource/roboto": "^4.5.7",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.9.1",
+        "@mui/x-data-grid": "^5.15.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
+        "chart.js": "^3.9.1",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
+        "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
