--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "axios": "^0.27.2",
         "chart.js": "^3.9.1",
         "jwt-decode": "^3.1.2",
+        "mdb-react-ui-kit": "^4.1.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
